fix fellowship white space

--- a/assets/sass/pages/_workspace.scss
+++ b/assets/sass/pages/_workspace.scss
@@ -3,7 +3,9 @@
     background: url('../../images/ainc-workspace-header-3.png');
     background-size: cover;
     background-position-y: 110%;
+    background-position-x: center;
     height: 90vh;
+    background-repeat: no-repeat;
     .lgx-heading-area {
       margin-top: 20vh;
     }
